# SRP-Project

./: .gitignore  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/shader/: default.vert  wave_dark.frag  wave_light.frag
app/src/main/cpp/: AudioDataBuffer.h  AudioDataBufferImpl.h  AudioDataCallback.h  AudioDataDispatcher.cpp  AudioDataDispatcher.h  AudioGLRender.h  AudioRecord.cpp  AudioRecord.h  AudioSource.h  BufferPool.h  BufferPoolImplement.h  CMakeLists.txt  DefaultRender.h  GLRender.h  GLThread.cpp  GLThread.h  MyMLLiveModel.cpp  MyMLLiveModel.h  PatientJNICallback.h  PatientThread.cpp  PatientThread.h  RenderFactory.h  SPLBuilder.cpp  SPLBuilder.h  SPLJNICallback.h  SPLThread.cpp  SPLThread.h  SnoreAudioCallback.h  SnoreAudioRecord.cpp  SnoreAudioRecord.h  SnoreJNICallback.cpp  SnoreJNICallback.h  SnoreThread.cpp  SnoreThread.h  SnoringRecognition.cpp  SnoringRecognition.h  WaveRender.cpp  WaveRender.h  WaveWriter.cpp  WaveWriter.h  (+14 more)
app/src/main/cpp/include/: fftw3.h  model.h  snore.h  sox.h
app/src/main/res/drawable/: back_button.xml  play_icon.xml  (+2 more)
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml  round_button.xml  vector_drawable_dui.xml  vector_drawable_person.xml  vector_myinf_help.xml  vector_myinf_history.xml  vector_myinf_inf.xml  vector_myinf_integral.xml  vector_myinf_money.xml  vector_myinf_set.xml  vector_next.xml  vector_sleep_everyday.xml  vector_sleep_look.xml  vector_sleep_timemath.xml  vector_sleep_watch.xml
gradle/wrapper/: gradle-wrapper.properties
(+85 files in other folders)
